k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-router
spec:
  selector:
    app: video-router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
